--- a/Site-yroc.html
+++ b/Site-yroc.html
@@ -11,5 +11,7 @@
 <div class="blue"></div>
 <div class="yellow"></div>
 </div>
+<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="jQuery.js"></script>
 </body>
 </html>
