--- a/Site-yroc4.html
+++ b/Site-yroc4.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<div class="center">
-		<div class="green"></div>
-		<div class="red"></div>
-		<div class="blue"></div>
-		<div class="yellow"></div>
+		<div class="ami green"></div>
+		<div class="ami red"></div>
+		<div class="ami blue"></div>
+		<div class="ami yellow"></div>
 	</div>
 	<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="script4.js"></script>
